BlockedDllList annotation is missing if the launcher process is enabled
Categories
(Firefox :: Launcher Process, defect)
Tracking
()
People
(Reporter: toshi, Assigned: toshi)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
I happened to realize BlockedDllList
annotation is not set if the launcher process is enabled. Bug 1420363 changed the type of the first parameter of DllBlocklist_WriteNotes
from HANDLE
to AnnotationWriter&
, but firefox!NativeNtBlockSet_Write
still receives the first parameter as HANDLE
. As a result, WriteFile
never succeeds.
Assignee | ||
Comment 1•3 years ago
|
||
With the patch, we can see the BlockedDllList
annotation when LauncherProcessState
is 0 (= Enabled).
Assignee | ||
Comment 2•3 years ago
|
||
Bug 1420363 changed the type of WriterFn
's parameter from HANDLE
to
AnnotationWriter&
and rewrote InternalWriteNotes
in mozglue.dll, but
it didn't update NativeNtBlockSet_Write
in firefox.exe, which is used
when the launcher process is enabled.
This patch applies a part of D46848 to NativeNtBlockSet_Write
.
Updated•3 years ago
|
Comment 3•3 years ago
|
||
Set release status flags based on info from the regressing bug 1420363
Updated•3 years ago
|
Comment 5•3 years ago
|
||
bugherder |
Updated•3 years ago
|
Comment 6•3 years ago
|
||
Is this worth backporting to ESR91 also? It grafts cleanly.
Assignee | ||
Comment 7•3 years ago
|
||
We don't need to. Without this patch, we miss the annotation field BlockedDllList
, but we haven't been actively monitoring it. There is no behavior change visible to users nor benefit for users.
Updated•3 years ago
|
Description
•